[package]
name = "nodelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.4.18", features = ["derive", "env"] }
prost = "0.12"
rand = "0.8.5"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.14"
tonic = "0.11"
tracing = "0.1.40"

[build-dependencies]
tonic-build = "0.11"
