[package]
name = "workerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
clap = { version = "~4.4.18", features = ["derive", "env"] }
dns-resolver = { git = "https://github.com/barrucadu/resolved.git" }
dns-types = { git = "https://github.com/barrucadu/resolved.git" }
nodelib = { path = "../nodelib" }
rust_decimal = "1"
rust_decimal_macros = "1.34.2"
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "process"] }
tonic = "0.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
