[package]
name = "apiclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
nodelib = { path = "../nodelib" }
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
rust_decimal = "1"
serde = "1"
serde_json = "1"
