[package]
name = "schedulerd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.3", features = ["derive", "env"] }
nodelib = { path = "../nodelib" }
rand = "0.8.5"
rust_decimal = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
